{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 53,
  "lineage": "fecc6f29-62cb-cc7f-b873-29aa6153900c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e93c5e8f09bdc984",
            "association_id": "eipassoc-041d5366412fccd8c",
            "domain": "vpc",
            "id": "eipalloc-0e93c5e8f09bdc984",
            "network_border_group": "us-east-1",
            "network_interface": "eni-091db5a8050d268a8",
            "private_dns": "ip-192-168-95-148.ec2.internal",
            "private_ip": "192.168.95.148",
            "public_dns": "ec2-52-20-170-81.compute-1.amazonaws.com",
            "public_ip": "52.20.170.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:381491874070:instance/i-0297cd1b7fbfa24c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0297cd1b7fbfa24c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0409109df2a869cb0",
            "private_dns": "ip-192-168-92-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.92.159",
            "public_ip": "52.90.237.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0daaaef29756565fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061caf39ea6d28378",
            "tags": {
              "Name": "tf-webServer-Ubuntu"
            },
            "tags_all": {
              "Name": "tf-webServer-Ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0709deb08013d6d5b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-sg",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:internet-gateway/igw-0f8ec96ab5e6e4a59",
            "id": "igw-0f8ec96ab5e6e4a59",
            "owner_id": "381491874070",
            "tags": {
              "Name": "tf-project-igw"
            },
            "tags_all": {
              "Name": "tf-project-igw"
            },
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e93c5e8f09bdc984",
            "association_id": "eipassoc-041d5366412fccd8c",
            "connectivity_type": "public",
            "id": "nat-0f31a6695e7db45ed",
            "network_interface_id": "eni-091db5a8050d268a8",
            "private_ip": "192.168.95.148",
            "public_ip": "52.20.170.81",
            "subnet_id": "subnet-061caf39ea6d28378",
            "tags": {
              "Name": "tf-project-nat"
            },
            "tags_all": {
              "Name": "tf-project-nat"
            }
          },
          "dependencies": [
            "aws_eip.tf-nat",
            "aws_internet_gateway.project-igw",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:route-table/rtb-008d31cd6b276d94d",
            "id": "rtb-008d31cd6b276d94d",
            "owner_id": "381491874070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f31a6695e7db45ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tf-nat",
            "aws_internet_gateway.project-igw",
            "aws_nat_gateway.project-nat",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:route-table/rtb-0801d3f855237c1e7",
            "id": "rtb-0801d3f855237c1e7",
            "owner_id": "381491874070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8ec96ab5e6e4a59",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e2e331d9dfa2c5c",
            "route_table_id": "rtb-008d31cd6b276d94d",
            "subnet_id": "subnet-032ec8fb8861a83e5"
          },
          "dependencies": [
            "aws_eip.tf-nat",
            "aws_internet_gateway.project-igw",
            "aws_nat_gateway.project-nat",
            "aws_route_table.private",
            "aws_subnet.tf-private-us-east-1a",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f189d834d759dcf",
            "route_table_id": "rtb-008d31cd6b276d94d",
            "subnet_id": "subnet-00d23ca9a329acb1a"
          },
          "dependencies": [
            "aws_eip.tf-nat",
            "aws_internet_gateway.project-igw",
            "aws_nat_gateway.project-nat",
            "aws_route_table.private",
            "aws_subnet.tf-private-us-east-1b",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de864944ff99c079",
            "route_table_id": "rtb-0801d3f855237c1e7",
            "subnet_id": "subnet-061caf39ea6d28378"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.public",
            "aws_subnet.tf-public-us-east-1a",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc52a48222883e4",
            "route_table_id": "rtb-0801d3f855237c1e7",
            "subnet_id": "subnet-01bd8a5f598d6bb15"
          },
          "dependencies": [
            "aws_internet_gateway.project-igw",
            "aws_route_table.public",
            "aws_subnet.tf-public-us-east-1b",
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:security-group/sg-0709deb08013d6d5b",
            "description": "Allow SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0709deb08013d6d5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-ssh-access",
            "name_prefix": "",
            "owner_id": "381491874070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg"
            },
            "tags_all": {
              "Name": "ssh-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:subnet/subnet-032ec8fb8861a83e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032ec8fb8861a83e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491874070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:subnet/subnet-00d23ca9a329acb1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d23ca9a329acb1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491874070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:subnet/subnet-061caf39ea6d28378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061caf39ea6d28378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491874070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:subnet/subnet-01bd8a5f598d6bb15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bd8a5f598d6bb15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491874070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db84d744e5e483e8"
          },
          "dependencies": [
            "aws_vpc.tf_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491874070:vpc/vpc-0db84d744e5e483e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-027fabe509b7c1eef",
            "default_route_table_id": "rtb-0a348d8ecc516a4dc",
            "default_security_group_id": "sg-09d9e635699da486d",
            "dhcp_options_id": "dopt-01d28dbe215c72d92",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db84d744e5e483e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a348d8ecc516a4dc",
            "owner_id": "381491874070",
            "tags": {
              "Name": "tf_project_vpc"
            },
            "tags_all": {
              "Name": "tf_project_vpc"
            }
          }
        }
      ]
    }
  ]
}